--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,6 +23,7 @@
         body {
             background: linear-gradient(135deg, #f6d365 0%, #fda085 100%);
         }
+
         .glass-morphism {
             background: rgba(255, 255, 255, 0.2);
             backdrop-filter: blur(10px);
@@ -30,10 +32,11 @@
         }
     </style>
 </head>
+
 <body class="min-h-screen flex items-center justify-center p-6">
     <div class="w-full max-w-2xl glass-morphism p-8 shadow-2xl">
         <div class="text-center mb-8">
-            <h1 class="text-4xl font-bold text-white mb-4 drop-shadow-lg">ANUVAD</h1>
+            <img src="anuvad_logo.png" alt="ANUVAD Logo" class="mx-auto mb-4 h-20">
             <p class="text-xl text-white opacity-80">Smart Translator | Break Language Barriers</p>
         </div>
 
@@ -43,29 +46,17 @@
                 <form id="text-translate-form" method="POST" action="/translate-text">
                     <div class="mb-4">
                         <label for="source-text" class="block text-gray-700 mb-2">Enter Text:</label>
-                        <textarea 
-                            id="source-text" 
-                            name="text" 
-                            rows="4" 
+                        <textarea id="source-text" name="text" rows="4"
                             class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-orange-500"
-                            placeholder="Type or paste text to translate..."
-                        ></textarea>
+                            placeholder="Type or paste text to translate..."></textarea>
                     </div>
 
                     <div class="mb-4">
                         <label for="target-lang" class="block text-gray-700 mb-2">Target Language:</label>
-                        <input 
-                            type="text" 
-                            id="target-lang-search" 
-                            placeholder="Search language..." 
+                        <input type="text" id="target-lang-search" placeholder="Search language..."
                             class="w-full px-3 py-2 border rounded-lg mb-2 focus:outline-none focus:ring-2 focus:ring-orange-500"
-                            onkeyup="filterDropdown('target-lang-search', 'target-lang')"
-                        >
-                        <select 
-                            id="target-lang" 
-                            name="target_lang" 
-                            class="w-full px-3 py-2 border rounded-lg"
-                        >
+                            onkeyup="filterDropdown('target-lang-search', 'target-lang')">
+                        <select id="target-lang" name="target_lang" class="w-full px-3 py-2 border rounded-lg">
                             <option value="en">English</option>
                             <option value="fr">French</option>
                             <option value="es">Spanish</option>
@@ -78,10 +69,8 @@
                         </select>
                     </div>
 
-                    <button 
-                        type="submit" 
-                        class="w-full bg-orange-500 text-white py-2 rounded-lg hover:bg-orange-600 transition duration-300"
-                    >
+                    <button type="submit"
+                        class="w-full bg-orange-500 text-white py-2 rounded-lg hover:bg-orange-600 transition duration-300">
                         Translate Text
                     </button>
                 </form>
@@ -89,36 +78,19 @@
 
             <div class="bg-white rounded-lg p-6 shadow-lg">
                 <h2 class="text-2xl font-semibold text-orange-600 mb-4">Image Translation</h2>
-                <form 
-                    id="image-translate-form" 
-                    method="POST" 
-                    action="/translate-image" 
-                    enctype="multipart/form-data"
-                >
+                <form id="image-translate-form" method="POST" action="/translate-image" enctype="multipart/form-data">
                     <div class="mb-4">
                         <label for="file" class="block text-gray-700 mb-2">Upload Image:</label>
-                        <input 
-                            type="file" 
-                            id="file" 
-                            name="file" 
-                            class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-orange-500"
-                        >
+                        <input type="file" id="file" name="file"
+                            class="w-full px-3 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-orange-500">
                     </div>
 
                     <div class="mb-4">
                         <label for="image-target-lang" class="block text-gray-700 mb-2">Target Language:</label>
-                        <input 
-                            type="text" 
-                            id="image-target-lang-search" 
-                            placeholder="Search language..." 
+                        <input type="text" id="image-target-lang-search" placeholder="Search language..."
                             class="w-full px-3 py-2 border rounded-lg mb-2 focus:outline-none focus:ring-2 focus:ring-orange-500"
-                            onkeyup="filterDropdown('image-target-lang-search', 'image-target-lang')"
-                        >
-                        <select 
-                            id="image-target-lang" 
-                            name="target_lang" 
-                            class="w-full px-3 py-2 border rounded-lg"
-                        >
+                            onkeyup="filterDropdown('image-target-lang-search', 'image-target-lang')">
+                        <select id="image-target-lang" name="target_lang" class="w-full px-3 py-2 border rounded-lg">
                             <option value="en">English</option>
                             <option value="fr">French</option>
                             <option value="es">Spanish</option>
@@ -131,13 +103,11 @@
                         </select>
                     </div>
 
-                    <button 
-                        type="submit" 
-                        class="w-full bg-orange-500 text-white py-2 rounded-lg hover:bg-orange-600 transition duration-300"
-                    >
+                    <button type="submit"
+                        class="w-full bg-orange-500 text-white py-2 rounded-lg hover:bg-orange-600 transition duration-300">
                         Translate Image
                     </button>
-                </form>
+                </form> 
             </div>
         </div>
 
@@ -146,4 +116,5 @@
         </div>
     </div>
 </body>
+
 </html>
